properly deprecated everything