@@ -465,7 +465,7 @@ public class TriangleToolsTest
       sideBLength = 1.0;
       angleB = 0.8;
       isAngleAObtuse = false;
-      assertTrue("Case 3 failed.", new Double(TriangleTools.computeSideLengthFromSideSideAngle(sideALength, sideBLength, angleB, isAngleAObtuse)).isNaN());
+      assertTrue("Case 3 failed.", Double.valueOf(TriangleTools.computeSideLengthFromSideSideAngle(sideALength, sideBLength, angleB, isAngleAObtuse)).isNaN());
 
       // Case 4: Known angle < Pi/2 and adjacent side > opposite side and opposite side > height and angleA is acute
       sideALength = 1.5;
@@ -496,14 +496,14 @@ public class TriangleToolsTest
       sideBLength = 1.0;
       angleB = 1.75;
       isAngleAObtuse = false;
-      assertTrue("Case 7 failed.", new Double(TriangleTools.computeSideLengthFromSideSideAngle(sideALength, sideBLength, angleB, isAngleAObtuse)).isNaN());
+      assertTrue("Case 7 failed.", Double.valueOf(TriangleTools.computeSideLengthFromSideSideAngle(sideALength, sideBLength, angleB, isAngleAObtuse)).isNaN());
 
       // Case 8: Known angle > Pi/2 and adjacent side > opposite side
       sideALength = 1.5;
       sideBLength = 1.0;
       angleB = 1.75;
       isAngleAObtuse = false;
-      assertTrue("Case 8 failed.", new Double(TriangleTools.computeSideLengthFromSideSideAngle(sideALength, sideBLength, angleB, isAngleAObtuse)).isNaN());
+      assertTrue("Case 8 failed.", Double.valueOf(TriangleTools.computeSideLengthFromSideSideAngle(sideALength, sideBLength, angleB, isAngleAObtuse)).isNaN());
 
       // Random Testing
       Random random = new Random(34534L);
